Remove zone id from IPv6 host in WebSocket handshake

Ensure that link-local IPv6 addresses in WebSocket handshakes do not
include the zone identifier in the 'Host' header, as per RFC 6874.
This prevents connection failures due to invalid host syntax.

Fixes: QTBUG-133557
Change-Id: I116d95c1efe02d1990c36bba6d9ab2ecade04a61
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>